Comments (lots of comments) added