@@ -35,37 +35,76 @@ public class SendWorker implements Runnable {
 
     @Override
     public void run() {
+        
         while (running.get()) {
+            
             try {
-                //izvuci poruku iz sendQueue
+                
+                /* Retrieving and removing the head of this queue,
+                waiting up to the specified wait time if necessary for an element to become available. */
                 DatagramPacket sendPacket = sendQueue.poll(10, TimeUnit.MILLISECONDS);
+                
+                // Making sure the sendPacket is not null before handling the sending
                 if (sendPacket != null) {
-                    Message m = Message.deserialize(PacketUtils.dataFromDatagramPacket(sendPacket));
-                    switch (m.getType()) {
+
+                    // Extracting the message (that will be sent) from the sendPacket
+                    Message messageToSend = Message.deserialize(PacketUtils.dataFromDatagramPacket(sendPacket));
+
+                    // Checking the type of the messages that will be sent
+                    switch (messageToSend.getType()) {
+
                         case DATA -> {
-                            // dodavanje poruke u nepotvrdene
-                            unacknowledged.put(m.getMessageId(), new Pair<>(sendPacket, System.currentTimeMillis()));
+
+                            /* Adding the message to the unacknowledged messages
+                            (as a pair {DatagramPacket, sendingTimestamp}) if the message is going to send DATA */
+                            unacknowledged.put(messageToSend.getMessageId(), new Pair<>(sendPacket, System.currentTimeMillis()));
+
+                            // Sending the packet
                             socket.send(sendPacket);
+
                         }
-                        //ako je potvrda samo salji
+
+                        // Sending the packet immediately if its only an ACK message
                         case ACK -> socket.send(sendPacket);
+
+                        // Throwing an exception if the message is nor DATA, nor ACK message
                         default -> throw new IllegalArgumentException(
-                                "'%s' is invalid message type!".formatted(m.getType()));
+                                String.format("Message type '%s' is invalid type!", messageToSend.getType()));
+
                     }
+
                 }
-                // retransmisija nepotvrdenih
+
+                // RETRANSMISSION of the unacknowledged packets
                 for (Map.Entry<Integer, Pair<DatagramPacket, Long>> entry : unacknowledged.entrySet()) {
-                    Pair<DatagramPacket, Long> pair = entry.getValue();
+
+                    // Retrieving the current time
                     long currentTime = System.currentTimeMillis();
+
+                    // Getting the pair {DatagramPacket, sentTimestamp}
+                    Pair<DatagramPacket, Long> pair = entry.getValue();
+
+                    // Extracting the sentTimestamp from the pair
                     long sentTime = pair.getV2();
-                    // 4 * AVERAGE_DELAY -> jeli proslo dovoljno vremena
+
+                    /* If enough time (4 * AVERAGE_DELAY) has passed without getting the ACK
+                    the packet is getting sent again */
                     if ((currentTime - sentTime) > 4 * ConfigProperties.PACKAGE_DELAY) {
+
+                        // Sending the packet again
                         socket.send(pair.getV1());
+
+                        // Setting the sentTimestamp of the packet to currentTime
                         pair.setV2(currentTime);
+
                     }
+
                 }
-            } catch (Exception e) {
-                logger.severe(e.getMessage());
+
+            }
+
+            catch (Exception e) {
+                logger.severe("An error has occurred while sending a packet. " + e.getMessage());
                 break;
             }
         }
